[package]
name = "microphone-volume-max"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.7", features = ["derive"] }
windows = { version = "0.57.0", features = ["Win32", "Win32_Devices_Communication", "Win32_Foundation", "Win32_Media", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Media", "Win32_Devices_Properties", "Win32_UI_Shell_PropertiesSystem"] }
ctrlc = "3.4.4"
